--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>JS</title>
   </head>
   <body>
-    <h1>JS Pari e dispari</h1>
+    <h1>JS Pali e dispari</h1>
 
     <script src="script.js"></script>
   </body>
